Redesign home and profile ui

--- a/app/src/main/res/layout/activity_detail_food.xml
+++ b/app/src/main/res/layout/activity_detail_food.xml
@@ -37,6 +37,7 @@
                 app:popupTheme="@style/AppTheme.PopupOverlay" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
+
     </com.google.android.material.appbar.AppBarLayout>
 
     <include
@@ -48,10 +49,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
+        android:contentDescription="@string/image_description"
         app:layout_anchor="@id/app_bar"
         app:layout_anchorGravity="bottom|end"
         app:srcCompat="@android:drawable/ic_dialog_email"
-        app:tint="@android:color/white"
-        android:contentDescription="@string/image_description" />
+        app:backgroundTint="@color/color_primary"
+        app:tint="@android:color/white" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
