--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -90,6 +90,7 @@
     </com.google.android.material.card.MaterialCardView>
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_favorite"
         android:layout_width="210dp"
         android:layout_height="65dp"
         android:layout_below="@id/card_profile"
