--- a/favorite/src/main/res/layout/activity_favorite.xml
+++ b/favorite/src/main/res/layout/activity_favorite.xml
@@ -3,7 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.favorite.FavoriteFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".FavoriteActivity">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="?attr/actionBarSize"
+        app:titleTextColor="@android:color/white"
+        android:background="?attr/colorPrimary" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_favorite"
@@ -11,11 +20,12 @@
         android:layout_height="match_parent"
         android:paddingHorizontal="8dp"
         android:paddingVertical="16dp"
+        android:layout_below="@id/toolbar"
         tools:listitem="@layout/item_favorite" />
 
     <include
         android:id="@+id/view_empty"
         layout="@layout/view_empty"
-        android:visibility="gone" />
+        android:visibility="gone"/>
 
 </RelativeLayout>
