--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -16,4 +16,9 @@
         android:icon="@drawable/ic_profile"
         android:title="@string/profile"
         app:cnb_iconColor="@color/color_primary" />
+    <item
+        android:id="@+id/favorite_menu"
+        android:icon="@drawable/ic_love"
+        android:title="@string/favorites"
+        app:cnb_iconColor="@color/color_primary" />
 </menu>
